fix spacing with department details label on desktop

--- a/components/form/body/row/AccordionContent.module.scss
+++ b/components/form/body/row/AccordionContent.module.scss
@@ -160,6 +160,10 @@
 .linksLabel {
   padding-top: 16px;
   padding-bottom: 16px;
+
+  @media (min-width: $desktop-min) {
+    padding-bottom: 0px;
+  }
 }
 
 .links {
